fixed error with entities

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 		"build": "tsc",
 		"lint": "eslint src/**/*.ts",
 		"lint:fix": "eslint src/**/*.ts --fix",
-		"typeorm": "typeorm-ts-node-esm",
-		"show-migration": "typeorm-ts-node-esm -d src/db/data-source.ts migration:show",
-		"run-migration": "typeorm-ts-node-esm -d src/db/data-source.ts migration:run",
-		"revert-migration": "typeorm-ts-node-esm -d src/db/data-source.ts migration:revert",
+		"typeorm": "typeorm-ts-node-esm -d src/db/data-source.ts",
+		"migration:create": "typeorm migration:create",
+		"migration:show": "typeorm-ts-node-esm -d src/db/data-source.ts migration:show",
+		"migration:run": "typeorm-ts-node-esm -d src/db/data-source.ts migration:run",
+		"migration:revert": "typeorm-ts-node-esm -d src/db/data-source.ts migration:revert",
 		"list-routes": "ts-node src/scripts/route-list.ts",
 		"ci": "yarn lint && yarn build"
 	},
