--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
 		"computed-property-spacing": ["warn", "never"],
 		"default-case": "warn",
 		"linebreak-style": "off",
+		"implicit-arrow-linebreak": "off",
 		"import/newline-after-import": "warn",
 		"indent": [
 			"warn",
