--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"migration:show": "typeorm-ts-node-esm -d src/db/data-source.ts migration:show",
 		"migration:run": "typeorm-ts-node-esm -d src/db/data-source.ts migration:run",
 		"migration:revert": "typeorm-ts-node-esm -d src/db/data-source.ts migration:revert",
+		"generate": "ts-node src/scripts/generators.ts",
 		"list-routes": "ts-node src/scripts/route-list.ts",
 		"ci": "yarn lint && yarn build"
 	},
@@ -39,13 +40,12 @@
 		"express-list-endpoints": "^6.0.0",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.4.3",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.5",
 		"nodemailer-smtp-transport": "^2.7.4",
 		"pg": "^8.7.3",
-		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.7.0",
-		"typeorm": "^0.3.5",
 		"typescript": "^4.6.3",
 		"winston": "^3.7.2"
 	},
