--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
 		"build": "tsc",
 		"lint": "eslint src/**/*.ts",
 		"lint:fix": "eslint src/**/*.ts --fix",
-		"typeorm": "typeorm-ts-node-esm -d src/db/data-source.ts",
-		"migration:create": "typeorm migration:create",
-		"migration:show": "typeorm-ts-node-esm -d src/db/data-source.ts migration:show",
-		"migration:run": "typeorm-ts-node-esm -d src/db/data-source.ts migration:run",
-		"migration:revert": "typeorm-ts-node-esm -d src/db/data-source.ts migration:revert",
 		"generate": "ts-node src/scripts/generators.ts",
 		"list-routes": "ts-node src/scripts/route-list.ts",
 		"ci": "yarn lint && yarn build"
@@ -40,6 +35,7 @@
 		"express-list-endpoints": "^6.0.0",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^4.7.0",
 		"mongoose": "^6.4.3",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.5",
