--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"lib": ["es5", "es6"],
 		"target": "es6",
 		"module": "commonjs",
+		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"strict": true,
 		"skipLibCheck": true,
