--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/lodash": "^4.14.182",
 		"@types/morgan": "^1.9.3",
 		"@types/nodemailer-smtp-transport": "^2.7.5",
 		"bcrypt": "^5.0.1",
@@ -35,6 +36,7 @@
 		"express-list-endpoints": "^6.0.0",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"mongodb": "^4.7.0",
 		"mongoose": "^6.4.3",
 		"morgan": "^1.10.0",
@@ -52,6 +54,7 @@
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-plugin-import": "^2.26.0",
-		"husky": "^7.0.4"
+		"husky": "^7.0.4",
+		"prettier": "^2.7.1"
 	}
 }
