--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"sourceMap": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"strictPropertyInitialization": false
+		"strictPropertyInitialization": false,
+		"typeRoots": ["./@types", "./node_modules/@types"]
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
