--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "ts-node dist/bin/server.js",
 		"predev": "yarn lint",
 		"dev": "nodemon",
+		"test": "ENV_FILE=./.env.test jest --detectOpenHandles",
 		"build": "tsc",
 		"lint": "eslint src/**/*.ts",
 		"lint:fix": "eslint src/**/*.ts --fix",
@@ -49,12 +50,15 @@
 	},
 	"devDependencies": {
 		"@types/express-list-endpoints": "^6.0.0",
+		"@types/jest": "^28.1.5",
 		"@typescript-eslint/eslint-plugin": "^5.20.0",
 		"@typescript-eslint/parser": "^5.20.0",
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-plugin-import": "^2.26.0",
 		"husky": "^7.0.4",
+		"jest": "^28.1.3",
+		"mongoose-seed": "^0.6.0",
 		"prettier": "^2.7.1"
 	}
 }
