--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"esModuleInterop": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"outDir": "dist",
+		"outDir": "build",
 		"sourceMap": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
