--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"husky": "^7.0.4",
 		"jest": "^28.1.3",
 		"mongoose-seed": "^0.6.0",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"ts-jest": "^28.0.7"
 	}
 }
