--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
 		}
 	},
 	"dependencies": {
-		"@types/bcrypt": "^5.0.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/lodash": "^4.14.182",
 		"@types/morgan": "^1.9.3",
 		"@types/nodemailer-smtp-transport": "^2.7.5",
-		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-list-endpoints": "^6.0.0",
+		"i18next": "^21.9.1",
+		"i18next-fs-backend": "^1.1.5",
+		"i18next-http-middleware": "^3.2.1",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
@@ -50,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@types/express-list-endpoints": "^6.0.0",
+		"@types/i18next-fs-backend": "^1.1.2",
 		"@types/jest": "^28.1.6",
 		"@typescript-eslint/eslint-plugin": "^5.20.0",
 		"@typescript-eslint/parser": "^5.20.0",
