--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 	"author": "John Damilola Ogungbure <jogungbure@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"start": "npm run build && npm run serve",
+		"start": "npm run build && npm run copy-assets && npm run serve",
 		"serve": "node -r dotenv/config build/bin/www/server.js ",
-		"build": "npm run clean && npm run build-ts",
+		"build": "npm run clean && npm run build-ts && npm run copy-assets",
 		"build-ts": "tsc",
 		"watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
 		"watch-node": "nodemon build/bin/www/server.js",
@@ -18,7 +18,7 @@
 		"lint": "eslint src/**/*.ts",
 		"lint:fix": "eslint src/**/*.ts --fix",
 		"ci": "yarn lint && yarn test",
-		"copy-assets": "ts-node scripts/copy_assets.ts"
+		"copy-assets": "node scripts/copy_assets.ts"
 	},
 	"husky": {
 		"hooks": {
@@ -26,6 +26,7 @@
 		}
 	},
 	"dependencies": {
+		"@types/fs-extra": "^9.0.13",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -52,20 +53,21 @@
 		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
 		"@types/express-list-endpoints": "^6.0.0",
 		"@types/i18next-fs-backend": "^1.1.2",
 		"@types/jest": "^28.1.6",
-		"@types/method-override": "^0.0.32",
-		"@typescript-eslint/eslint-plugin": "^5.20.0",
-		"@typescript-eslint/parser": "^5.20.0",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/lodash": "^4.14.182",
+		"@types/method-override": "^0.0.32",
 		"@types/morgan": "^1.9.3",
 		"@types/nodemailer-smtp-transport": "^2.7.5",
+		"@typescript-eslint/eslint-plugin": "^5.20.0",
+		"@typescript-eslint/parser": "^5.20.0",
+		"concurrently": "^7.3.0",
 		"eslint": "^8.13.0",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -74,7 +76,6 @@
 		"jest": "^28.1.3",
 		"mongoose-seed": "^0.6.0",
 		"prettier": "^2.7.1",
-		"ts-jest": "^28.0.7",
-		"concurrently": "^7.3.0"
+		"ts-jest": "^28.0.7"
 	}
 }
