refactored auth and user

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
 		"__ROUTE__": true
 	},
 	"rules": {
-		"max-classes-per-file": "off"
+		"max-classes-per-file": "off",
+		"no-console": "error"
 	},
 	"overrides": [
 		{
