--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-	"baseUrl": "./src",
 	"compilerOptions": {
+		"baseUrl": ".",
 		"incremental": true,
 		"lib": ["es5", "es6"],
 		"target": "es2019",
@@ -16,6 +16,6 @@
 		"strictPropertyInitialization": false,
 		"typeRoots": ["./src/app/types", "./node_modules/@types"]
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules"]
 }
