--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
 	},
 	"rules": {
 		"max-classes-per-file": "off",
-		"no-console": "error"
+		"no-console": "error",
+		"no-unused-vars": "error"
 	},
 	"overrides": [
 		{
