--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,30 +1,31 @@
 {
 	"compilerOptions": {
-		"baseUrl": "./src",
 		"incremental": true,
-		"lib": ["es5", "es6"],
 		"target": "es2019",
-		"module": "esnext",
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
+		"module": "commonjs",
 		"strict": true,
-		"skipLibCheck": true,
+		"noImplicitAny": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"noImplicitReturns": true,
+		"strictNullChecks": true,
+		"noFallthroughCasesInSwitch": true,
+		"strictFunctionTypes": false,
+		"noImplicitThis": false,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"baseUrl": "./src",
+		"esModuleInterop": true,
+		"preserveConstEnums": true,
 		"outDir": "build",
+		"paths": {
+			"*": ["node_modules/*", "./src/library/types/*"]
+		},
+		"types": ["node", "jest"],
 		"sourceMap": true,
-		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"strictPropertyInitialization": false,
-		"typeRoots": ["./src/app/types", "./node_modules/@types"]
+		"emitDecoratorMetadata": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules"],
-	"ts-node": {
-		"compilerOptions": {
-			"esModuleInterop": true,
-			"module": "commonjs",
-			"moduleResolution": "node",
-			"noEmit": true,
-			"allowSyntheticDefaultImports": true
-		}
-	}
+	"exclude": [".templates"]
 }
