--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@types/fs-extra": "^9.0.13",
 		"bcryptjs": "^2.4.3",
+		"cloudinary": "^1.33.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
@@ -63,6 +64,7 @@
 		"@types/lodash": "^4.14.182",
 		"@types/method-override": "^0.0.32",
 		"@types/morgan": "^1.9.3",
+		"@types/multer": "^1.4.7",
 		"@types/nodemailer-smtp-transport": "^2.7.5",
 		"@typescript-eslint/eslint-plugin": "^5.20.0",
 		"@typescript-eslint/parser": "^5.20.0",
