--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,7 @@
 {
+	"extends": "../tsconfig.json",
 	"compilerOptions": {
+		"skipLibCheck": true,
 		"incremental": true,
 		"target": "es2019",
 		"module": "commonjs",
